# faucet

./: .dockerignore  .env.docker  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  flake.nix  justfile  melodie_metadata.scale
.github/workflows/: deploy-dev.yml  deploy-prod.yml  docker-publish.yml
backend/: .env  .env.example  Cargo.toml
backend/src/: api.rs  captcha.rs  chain.rs  main.rs  websocket.rs
frontend/: Cargo.toml  README.md  index.html
frontend/src/: faucet.rs  lib.rs  main.rs
frontend/src/components/: button_send.rs  captcha.rs  footer.rs  header.rs  input_address.rs  mod.rs  modal.rs  websocket_client.rs
shared/: Cargo.toml
shared/src/: lib.rs
