[package]
name = "allfeat-faucet-backend"
version = "0.1.0"
edition = "2021"
authors = ["Allfeat labs. <hello@allfeat.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.8", features = ["ws", "macros"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["fs"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tracing-test = "0.2"
subxt = "0.42.1"
subxt-signer = "0.42.1"
serde = "1"
serde_json = "1"
futures = "0.3"
reqwest = { version = "0.12", features = ["json"] }
dotenvy = { workspace = true }
allfeat-faucet-shared = { workspace = true }
