[package]
name = "allfeat-faucet-frontend"
version = "0.1.0"
edition = "2021"
authors = ["Allfeat labs. <hello@allfeat.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Frontend
leptos = { version = "0.8", features = ["csr"] }
leptos_meta = { version = "0.8" }
leptos_router = { version = "0.8" }
console_log = "1"
log = "0.4"
console_error_panic_hook = "0.1"
uuid = { version = "1.17", features = ["v4", "js"] }
dotenvy = { workspace = true }
wasm-bindgen = "0.2"
gloo-net = "0.6"
regex = "1.11"
serde_json = "1"
allfeat-faucet-shared = { workspace = true }

# utils
# strum = { version = "0.25", features = ["derive", "strum_macros"] }
# strum_macros = "0.25"


[dev-dependencies]
wasm-bindgen-test = "0.3"
web-sys = { version = "0.3", features = ["Document", "Window"] }
